--- a/public/stylesheets/overzicht.css
+++ b/public/stylesheets/overzicht.css
@@ -168,7 +168,7 @@
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        filter: drop-shadow(rgb(25, 25, 25) 1px 5px 8px);
+        box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.2);
     }
 
 
