--- a/views/profiel.ejs
+++ b/views/profiel.ejs
@@ -17,15 +17,15 @@
     <form action="/mijnprofiel" method="post" enctype="multipart/form-data">
         <div>
             <label for="name">Naam</label>
-            <input type="text" id="name" name="name" value="<%= user.name %>">
+            <input type="text" id="name" name="name" value="<%= user.name %>" readonly>
         </div>
         <div>
             <label for="username">Gebruikersnaam</label>
-            <input type="text" id="username" name="username" value="<%= user.username %>">
+            <input type="text" id="username" name="username" value="<%= user.username %>" readonly>
         </div>
         <div>
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" value="<%= user.email %>">
+            <input type="email" id="email" name="email" value="<%= user.email %>" readonly>
         </div>
         <div>
             <label for="password">Wachtwoord</label>
@@ -41,6 +41,5 @@
         <a class="logout" href="/logout">Sign out</a>
     </form>
     </div>
-    
 </body>
 </html>
