--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -120,7 +120,22 @@ button:hover{
     cursor: pointer;
 }
 
+.back {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--accent-kleur);
+    color: white;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    transition: .5s;
+}
 
+.back:hover {
+    background: #fff;
+    color: black;
+   }
 
 
 /* Animations */
