--- a/public/stylesheets/detailpagina.css
+++ b/public/stylesheets/detailpagina.css
@@ -203,14 +203,73 @@ main h2 {
     justify-content: end; */
 }
 
-
-
-
 @media only screen and (min-width: 550px) {
 
+
+    .profileFotoContainer {
+        width: 35vw;
+        height: 35vh;
+    }
+
+    .containerProfiel{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 3em;
+    }
+
+    .rechts .naam, h3{
+      font-size: 3vw;
+    }
+
+
+    .contact .leeftijd, .geslacht {
+    font-size: 1.5vw;
+    }
+
+
+    .contact .leeftijdNummer, .geslachtMV {
+        font-size: 1.5vw;
+        margin-right: 5em;
+        }
+
+        .expertiseContainer h3 {
+            font-size: 3vw;
+        }
+    
     .contactInfoContainer h3 {
-         font-size: 4vw;
+         font-size: 2.5vw;
+    }
+
+    .contactLinks a{
+        font-size: 2vw;
     }
     
+    .contactRechts .contactInfo a{
+        font-size: 1vw;
+    }
+    
+
+
+    /* pills */
+
+    .expertiseContainer .pills li {
+        font-size: 1.5vw;
+    }
 }
 
+
+@media only screen and (min-width: 900px) {
+    .profileFotoContainer {
+        width: 100%;
+        height: 50vh;
+        margin-right: 2em;
+    }
+
+    .rechts {
+        margin-right: 5vw;
+    }
+
+    .containerProfiel{
+        gap: 7em;
+    }
+}
