footer styling done

--- a/public/stylesheets/footerraha.css
+++ b/public/stylesheets/footerraha.css
@@ -12,8 +12,9 @@ ul{
 	list-style: none;
 }
 .footer{
-	background-color: #24262b;
+	 background-color: rgb(20, 20, 20);
     padding: 70px 0;
+	border-top: 1px solid var(--accent-kleur);
 }
 .footer-col{
    width: 25%;
@@ -22,7 +23,7 @@ ul{
 .footer-col h4{
 	font-size: 18px;
     text-align: left;
-	color: #ffffff;
+	color: var(--tekst);
 	text-transform: capitalize;
 	margin-bottom: 35px;
 	font-weight: 500;
@@ -33,7 +34,7 @@ ul{
 	position: absolute;
 	left:0;
 	bottom: -10px;
-	background-color: #e91e63;
+	background-color: var(--accent-kleur);
 	height: 2px;
 	box-sizing: border-box;
 	width: 50px;
