--- a/views/footerraha.ejs
+++ b/views/footerraha.ejs
@@ -1,5 +1,7 @@
 
   <link rel="stylesheet" href="/stylesheets/footerraha.css">
+  <link rel="stylesheet" href="/stylesheets/styles.css">
+  
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
 
