banner, footer, over ons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,11 +22,11 @@
 <main>
     <%- include('banner.ejs') %>
     <%- include('ourstory.ejs') %>
+    <!-- <%- include('waaromons.ejs') %> -->
     <%- include('workoutslider.ejs') %>
 
 
     <%- include('collaps.ejs') %>
-
  <footer>
     <%- include('footerraha.ejs') %>
 </footer>
