--- a/views/ourstory.ejs
+++ b/views/ourstory.ejs
@@ -2,21 +2,21 @@
 <link rel="stylesheet" href="/stylesheets/ourstory.css">
 <div class="aboutus">
     <div class="outer">
-          
-            <h1>The Story Of <br/> <span>FitBuddy</span></h1>
-            <p>hier komt een stukje text over waarom we dit page hebben . en heel
-              veel bullshitkomt een stukje text over waarom we dit page hebben .hier komt een stukje text over waarom we dit page hebben . en heel
-              veel bullshit hahahaha ik moet gewoon veel text hebben so keep writing
-              hier komt een omt een stukje text over waarom we dit page hebben .hier komt een stukje text over waarom we dit page hebben . en heel
-              veel bullshit hah stukje text over waarom we dit page hebben .hier komt een stukje text over waarom we dit page hebben . en heel
-              veel bullshit hahahaha ik moet gewoon veel text hebben so keep writing
-              hier komt een stukje text over waarom we dit page hebben .Shadow your real allegiance to New York's Pirate radio with this cool cap featuring the Graphic Know Wave logo.</p>
+          <div class="mainStory">
+            <h1>Over<br/> <span>Ons</span></h1>
+            <p>
+              FitBuddy is jouw ultieme trainingspartner voor het bereiken van fitnessdoelen. Met een breed scala aan trending workouts zoals HIIT, yoga, pilates en krachttraining biedt FitBuddy voor ieder wat wils. Of je nu thuis, in de sportschool of buiten wilt trainen, FitBuddy past zich aan jouw behoeften aan.
+               </p>
+
+               <p>De gebruiksvriendelijke app begeleidt je stap voor stap, met video-instructies en gepersonaliseerde schema's. Begin vandaag nog en ervaar hoe FitBuddy je helpt fit, sterk en gezond te worden, waar en wanneer je maar wilt!</p>
             
             <div class="button">
               <a class="cart-btn" href="#">ADD TO CART</a>
             </div>
-            
-    
+          </div>
+        
+
+
         <img src="stylesheets/images/goforit.png"  class="animated fadeInRight"></img>
     </div>
     
