--- a/views/workoutslider.ejs
+++ b/views/workoutslider.ejs
@@ -1,12 +1,13 @@
 <link rel="stylesheet" href="/stylesheets/workoutslider.css" />
+<link rel="stylesheet" href="/stylesheets/styles.css" />
+
 
 <div class="textsliders">
-  <h3>MEEST GEKEKEN DEZE WEEK</h3>
+  <h3>Trending Workouts</h3>
 
   <p>
-    hier komt een stukje text over waarom we dit page hebben . en heel veel
-    bullshit hahahaha ik moet gewoon veel text hebben so keep writing hier komt
-    een stukje text over waarom we dit page hebben .
+  
+FitBuddy biedt trending workouts voor zelfstandig trainen. Probeer HIIT voor snelle resultaten, yoga en pilates voor balans en flexibiliteit, en bodyweight-oefeningen voor overal trainen. Met FitBuddy train je effectief en gevarieerd, waar en wanneer je wilt!
   </p>
 </div>
 
