--- a/public/stylesheets/workoutslider.css
+++ b/public/stylesheets/workoutslider.css
@@ -1,297 +1,313 @@
-
-.textsliders h3{
-	color:#b5d815;
-	position: relative;
-margin: 2em 0 0 0;
-	font-family: var(--content-font);
-	font-size: 3em;
-	left: 2%;
+.textsliders {
+	padding: 2em;
 }
 
-
+.textsliders h3 {
+	color: var(--accent-kleur);
+	position: relative;
+	margin: 2em 0 0 0;
+	font-size: 5vw;
+	left: 2%;
+	text-transform: uppercase;
+}
 
 .textsliders p {
 	width: 100%;
 	font-size: 0.5em;
 
-	color: #aaa;
-
 	position: relative;
-font-size: 18px;
+	font-size: 18px;
 	text-align: left;
 	left: 2%;
-	font-family: var(--main-font);
 }
-	.accordion {
-	
-	  width: 95%;
-	  height: 80%;
 
-	  overflow: hidden;
-left: 2%;
-	  position: relative;
-	  background-color: rgba(0, 0, 0, 0.75);
-	}
-	
-	@media (min-width: 768px) {
-	  .accordion {
+.accordion {
+
+	width: 95%;
+	height: 80%;
+
+	overflow: hidden;
+	left: 2%;
+	position: relative;
+	background-color: rgba(0, 0, 0, 0.75);
+}
+
+@media (min-width: 768px) {
+	.accordion {
 		height: 500px;
-	  }
 	}
-	
+}
+
+.accordion ul {
+	position: relative;
+	z-index: 1;
+	width: 100%;
+
+	padding: 0;
+	list-style: none;
+}
+
+@media (min-width: 768px) {
 	.accordion ul {
-	  position: relative;
-	  z-index: 1;
-	  width: 100%;
-	
-	  padding: 0;
-	  list-style: none;
-	}
-	
-	@media (min-width: 768px) {
-		.accordion ul {
 		display: table;
 		table-layout: fixed;
-	  }
 	}
-	
-	/* Background images */
-	
-	.accordion li .teaser {
-	  opacity: 1;
-	  font-size: 24px;
-	}
-	
-	.accordion li .label {
-	  transition: opacity 200ms ease;
-	  transition-delay: 200ms;
-	  position: absolute;
-	  top: 20px;
-	  left: 50%;
-	  color:#b5d815;
-	  font-weight: 500;
-	  font-family: var(--main-color);
-	  width: auto;
-	  opacity: 0;
-	  transform-origin: 0px 0px 0px;
-	  transform: matrix(0, 1, -1, 0, 0, 0) translate(0, -50%);
-	  font-size: 24px;
-	}
-	
+}
+
+/* Background images */
+
+.accordion li .teaser {
+	opacity: 1;
+	font-size: 24px;
+}
+
+.accordion li .label {
+	transition: opacity 200ms ease;
+	transition-delay: 200ms;
+	position: absolute;
+	top: 20px;
+	left: 50%;
+	color: var(--accent-kleur);
+	font-weight: 500;
+	font-family:  monument extended, sans-serif;
+	text-transform: uppercase;
+
+	width: auto;
+	opacity: 0;
+	transform-origin: 0px 0px 0px;
+	transform: matrix(0, 1, -1, 0, 0, 0) translate(0, -50%);
+	font-size: 24px;
+}
+
+.accordion li {
+	vertical-align: bottom;
+	position: relative;
+	width: 16.666%;
+	/* 6 into 100 */
+	border-bottom: 2px solid rgba(0, 0, 0, 0.75);
+	transition: all 500ms ease;
+	height: 90px;
+}
+
+@media (min-width: 768px) {
 	.accordion li {
-	  vertical-align: bottom;
-	  position: relative;
-	  width: 16.666%; /* 6 into 100 */
-	  border-bottom: 2px solid rgba(0, 0, 0, 0.75);
-	  transition: all 500ms ease;
-	  height: 90px;
-	}
-	
-	@media (min-width: 768px) {
-		.accordion li {
 		border-bottom: none;
 		border-right: 2px solid rgba(255, 255, 255, 0.75);
 		height: 500px;
 		display: table-cell;
-	  }
 	}
-	
-	.close {
-	  position: absolute;
-	  z-index: 4;
-	  color: rgb(64, 62, 62);
-	  font-size: 52px;
-	  line-height: 32px;
-	  padding: 15px;
-	  top: -60px;
-	  right: 20px;
-	  opacity: 0;
-	  cursor: pointer;
-	  transition: opacity 200ms ease;
-	  transition-delay: 100ms;
-	}
-	
-	.accordion .background-image {
-	  position: absolute;
-	  width: 100%;
-	  height: 100%;
-	  opacity: 0.75;
-	  background-repeat: no-repeat;
-	  background-position: center center;
-	  background-size: cover;
-	  top: 0;
-	  left: 0;
-	}
-	
+}
+
+.close {
+	position: absolute;
+	z-index: 4;
+	color: rgb(64, 62, 62);
+	font-size: 52px;
+	line-height: 32px;
+	padding: 15px;
+	top: -60px;
+	right: 20px;
+	opacity: 0;
+	cursor: pointer;
+	transition: opacity 200ms ease;
+	transition-delay: 100ms;
+}
+
+.accordion .background-image {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0.75;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	top: 0;
+	left: 0;
+}
+
+.accordion .wrapper {
+	width: 100%;
+	margin-top: 40px;
+}
+
+@media (min-width: 768px) {
 	.accordion .wrapper {
-	  width: 100%;
-	  margin-top: 40px;
-	}
-	
-	@media (min-width: 768px) {
-		.accordion .wrapper {
 		margin-top: 0;
 		width: calc(100% - 40px);
-	  }
 	}
-	
-	.accordion .row > div:nth-child(2) > img {
-	  margin: auto;
-	}
-	
-	&:hover:not(.opened).accordion .background-image {
-	  opacity: 0.65;
-	}
-	
-	.accordion div.teaser {
-	  position: absolute;
-	  top: 50%;
-	  left: 0;
-	  padding: 0 10px;
-	  text-align: center;
-	  width: calc(100% - 20px);
-	  transform: translateY(-50%);
-	  transition: opacity 300ms ease;
-	  transition-delay: 100ms;
-	  font-family:var(--main-font);
-	  text-overflow: clip;
-	  font-size: 50px;
-	  font-weight: 400;
-	  margin-bottom: 2px;
-	  color:#b5d815;
-	}
-	
-	.accordion div.full-content {
-	  display: block;
-	  overflow: hidden;
-	  width: 100%;
-	}
-	
-	.accordion a {
-	  display: block;
-	  height: 600px;
-	  width: 100%;
-	  position: relative;
-	  z-index: 3;
-	  vertical-align: bottom;
-	  padding: 30px 30px;
-	  box-sizing: border-box;
-	  color: #fff;
-	  text-decoration: none;
-	  font-family: Open Sans, sans-serif;
-	  transition: opacity 200ms ease;
-	}
-	
-	@media (min-width: 768px) {
-		.accordion a {
-		padding: 60px 60px;
-	  }
-	}
-	
-	.accordion a * {
-	  opacity: 0;
-	  position: relative;
-	  z-index: 5;
-	  overflow: hidden;
-	  transform: translateY(-10px);
-	  transition: opacity 400ms ease;
-	  transition-delay: 300ms;
-	}
-	
-	.accordion li.no-delay .full-content * {
-	  transition: none;
-	  transition-delay: 0ms;
-	}
-	
- .opened li .teaser {
-	  @media (min-width: 768px) {
-		opacity: 0;
-	  }
-	}
-	
-	.opened li .label {
-	  opacity: 0;
-	
-	  @media (min-width: 768px) {
-		opacity: 1;
-	  }
-	}
-	
-	.opened li.opened {
-	  .label {
-		opacity: 0;
-	  }
-	  .teaser {
-		opacity: 0;
-	  }
-	  .accordion  .full-content {
-		opacity: 1;
-	  }
-	}
-	
-	.accordion li:not(.opened) {
-	  width: 100%;
-	
-	  @media (min-width: 768px) {
-		width: 4%;
-	  }
-	}
-	.accordion	li.opened .background-image {
-		opacity: 0.09;
 }
-	.accordion	li.opened {
-	  height: 80%;
-	  width: 100%;
 
-	  @media (min-width: 768px) {
+.accordion .row>div:nth-child(2)>img {
+	margin: auto;
+}
+
+&:hover:not(.opened).accordion .background-image {
+	opacity: 0.65;
+}
+
+.accordion div.teaser {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	padding: 0 10px;
+	text-align: center;
+	width: calc(100% - 20px);
+	transform: translateY(-50%);
+	transition: opacity 300ms ease;
+	transition-delay: 100ms;
+	font-family: monument extended, sans-serif;;
+	text-overflow: clip;
+	font-size: 2vw;
+	font-weight: 400;
+	margin-bottom: 2px;
+	color: var(--accent-kleur);
+	text-transform: uppercase;
+	text-shadow: 3px 4px 7px rgba(0, 0, 0, 0.4);;
+}
+
+.accordion div.full-content {
+	display: block;
+	overflow: hidden;
+	width: 100%;
+}
+
+.accordion a {
+	display: block;
+	height: 600px;
+	width: 100%;
+	position: relative;
+	z-index: 3;
+	/* vertical-align: bottom; */
+	padding: 30px 30px;
+	box-sizing: border-box;
+	color: #fff;
+	text-decoration: none;
+	font-family: Open Sans, sans-serif;
+	transition: opacity 200ms ease;
+}
+
+@media (min-width: 768px) {
+	.accordion a {
+		padding: 60px 60px;
+	}
+}
+
+.accordion a * {
+	opacity: 0;
+	position: relative;
+	z-index: 5;
+	overflow: hidden;
+	transform: translateY(-10px);
+	transition: opacity 400ms ease;
+	transition-delay: 300ms;
+}
+
+.accordion li.no-delay .full-content * {
+	transition: none;
+	transition-delay: 0ms;
+}
+
+.opened li .teaser {
+	@media (min-width: 768px) {
+		opacity: 0;
+	}
+}
+
+.opened li .label {
+	opacity: 0;
+
+	@media (min-width: 768px) {
+		opacity: 1;
+	}
+}
+
+.opened li.opened {
+	
+	.label {
+		opacity: 0;
+	}
+
+	.teaser {
+		opacity: 0;
+	}
+
+	.accordion .full-content {
+		opacity: 1;
+	}
+}
+
+.accordion li:not(.opened) {
+	width: 100%;
+
+	@media (min-width: 768px) {
+		width: 4%;
+	}
+}
+
+.accordion li.opened .background-image {
+	opacity: 0.09;
+}
+
+.accordion li.opened {
+	height: 80%;
+	width: 100%;
+
+	@media (min-width: 768px) {
 		height: 500px;
 		width: 60%;
-	  }
-	
-	  .close {
+	}
+
+	.close {
 		top: 10px;
 		opacity: 1;
-	  }
-	
-	  div.full-content a * {
+	}
+
+	div.full-content a * {
 		opacity: 1;
 		transform: translateX(0);
-	  }
+		color: var(--accent-kleur);
 	}
-	
-	.accordion .about {
-	  text-align: center;
-	  font-family: 'Open Sans', sans-serif;
-	  font-size: 12px;
-	  color: #666;
+
+	div.full-content p{
+		color: var(--tekst);
+		margin-bottom: 1em;
+		margin-top: 1em;
 	}
-	
+}
 
-	
+.accordion .about {
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 12px;
+	color: #666;
+}
 
-  
-  /* Background images */
-  .accordion li:nth-child(6) .background-image {
+
+
+
+
+/* Background images */
+.accordion li:nth-child(6) .background-image {
 	background-image: url('/stylesheets/images/absman.jpeg');
-  }
-  
-  .accordion li:nth-child(5) .background-image {
+}
+
+.accordion li:nth-child(5) .background-image {
 	background-image: url('/stylesheets/images/cardiowomen.jpg');
-  }
-  
-  .accordion li:nth-child(4) .background-image {
+}
+
+.accordion li:nth-child(4) .background-image {
 	background-image: url('/stylesheets/images/fullbody.jpg');
-  }
-  
-  .accordion li:nth-child(3) .background-image {
+}
+
+.accordion li:nth-child(3) .background-image {
 	background-image: url('/stylesheets/images/flex.jpg');
-  }
-  
-  .accordion li:nth-child(2) .background-image {
+}
+
+.accordion li:nth-child(2) .background-image {
 	background-image: url('/stylesheets/images/backma.jpg');
-  
-  }
-  
-  .accordion li:nth-child(1) .background-image {
+
+}
+
+.accordion li:nth-child(1) .background-image {
 	background-image: url('/stylesheets/images/abswomen.jpg');
-  }
+}
