--- a/views/detailpagina.ejs
+++ b/views/detailpagina.ejs
@@ -132,7 +132,7 @@
                 </div>
             </main>
 
-            <%- include('footer.ejs') %>
+            <%- include('footerraha.ejs') %>
 
                 <script src="/stylesheets/scripts/detailpagina.js"></script>
 </body>
