--- a/views/workoutslider.ejs
+++ b/views/workoutslider.ejs
@@ -6,9 +6,12 @@
   <h3>Trending Workouts</h3>
 
   <p>
-  
-FitBuddy biedt trending workouts voor zelfstandig trainen. Probeer HIIT voor snelle resultaten, yoga en pilates voor balans en flexibiliteit, en bodyweight-oefeningen voor overal trainen. Met FitBuddy train je effectief en gevarieerd, waar en wanneer je wilt!
+    FitBuddy biedt trending workouts voor zelfstandig trainen. Probeer HIIT voor snelle resultaten, yoga en pilates voor
+    balans en flexibiliteit, en bodyweight-oefeningen voor overal trainen.  
   </p>
+
+    <p>Met FitBuddy train je effectief en
+      gevarieerd, waar en wanneer je wilt!</p>
 </div>
 
 <div class="accordion">
@@ -31,11 +34,8 @@ FitBuddy biedt trending workouts voor zelfstandig trainen. Probeer HIIT voor sne
                 </p>
               </div>
               <div class="col-sm-8 text-center">
-                <img
-                  class="img-responsive"
-                  src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff"
-                />
+                <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
+                  alt="http://via.placeholder.com/300x300/fff" />
               </div>
             </div>
           </div>
@@ -61,11 +61,8 @@ FitBuddy biedt trending workouts voor zelfstandig trainen. Probeer HIIT voor sne
                 </p>
               </div>
               <div class="col-sm-8 text-center">
-                <img
-                  class="img-responsive"
-                  src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff"
-                />
+                <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
+                  alt="http://via.placeholder.com/300x300/fff" />
               </div>
             </div>
           </div>
@@ -90,11 +87,8 @@ FitBuddy biedt trending workouts voor zelfstandig trainen. Probeer HIIT voor sne
                 </p>
               </div>
               <div class="col-sm-8 text-center">
-                <img
-                  class="img-responsive"
-                  src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff"
-                />
+                <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
+                  alt="http://via.placeholder.com/300x300/fff" />
               </div>
             </div>
           </div>
@@ -120,11 +114,8 @@ FitBuddy biedt trending workouts voor zelfstandig trainen. Probeer HIIT voor sne
                 </p>
               </div>
               <div class="col-sm-8 text-center">
-                <img
-                  class="img-responsive"
-                  src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff"
-                />
+                <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
+                  alt="http://via.placeholder.com/300x300/fff" />
               </div>
             </div>
           </div>
@@ -149,11 +140,8 @@ FitBuddy biedt trending workouts voor zelfstandig trainen. Probeer HIIT voor sne
               </p>
 
               <div class="col-sm-8 text-center">
-                <img
-                  class="img-responsive"
-                  src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff"
-                />
+                <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
+                  alt="http://via.placeholder.com/300x300/fff" />
               </div>
             </div>
           </div>
