--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -71,7 +71,7 @@
             <script src="/stylesheets/scripts/overzicht.js"></script>
         </main>
     
-    <%- include('footer.ejs') %>
+    <%- include('footerraha.ejs') %>
     
 </body>
 </html>
